--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/gogy/.config/hypr/wallpapers/anime_girl_wallpaper.png
-wallpaper = eDP-1,/home/gogy/.config/hypr/wallpapers/anime_girl_wallpaper.png
+preload = ~/.config/hypr/wallpapers/anime_girl_wallpaper.png
+wallpaper = eDP-1,~/.config/hypr/wallpapers/anime_girl_wallpaper.png
