--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,11 +34,13 @@ general {
     col.inactive_border=0x66333333
 
     cursor_inactive_timeout=0
-    damage_tracking=full # this can be 'none', 'monitor', 'full'. Makes the compositor only redraw the innactive bits of the display. Use 'full' for max optimisation.
+    damage_tracking=full # this can be 'none', 'monitor', 'full'. Makes the compositor only redraw the inactive bits of the display. Use 'full' for max optimisation.
 
-    layout=dwindle # 'master', 'dwindle'
+    layout=dwindle # 'master', 'dwindle' - master is where half of your screen has the active window, the other half has all the others. Dwindle is the classic layout.
 }
 
+
+# < - > - < - > - < - > - < - > CHANGE THIS SECTION IF YOU HAVE A DIFFERENT KEYBOARD < - > - < - > - < - > - < - > #
 input {
     kb_layout=gb
     #kb_variant=
