--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,7 +47,7 @@ input {
     #kb_model=
     #kb_options=
     #kb_rules=
-    repeat_rate=69
+    repeat_rate=69 # nice
 
     follow_mouse=1
     natural_scroll=1
